--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.2.2",
+    "@hookform/resolvers": "^3.9.0",
+    "@langchain/mistralai": "^0.0.25",
+    "@langchain/openai": "^0.2.1",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-collapsible": "^1.1.0",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@t3-oss/env-nextjs": "^0.10.1",
@@ -30,15 +34,17 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "geist": "^1.3.0",
+    "langchain": "^0.2.9",
     "lucide-react": "^0.407.0",
     "next": "^14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.1",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.3"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
