--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "langchain": "^0.2.9",
     "lucide-react": "^0.407.0",
     "next": "^14.2.4",
+    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "server-only": "^0.0.1",
+    "sonner": "^1.5.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
