--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   "dependencies": {
     "@clerk/nextjs": "^5.2.2",
     "@hookform/resolvers": "^3.9.0",
+    "@humeai/voice-react": "^0.1.10",
     "@langchain/mistralai": "^0.0.25",
     "@langchain/openai": "^0.2.1",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-collapsible": "^1.1.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-separator": "^1.1.0",
