--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
     "geist": "^1.3.0",
+    "hume": "^0.7.2",
     "langchain": "^0.2.9",
     "lucide-react": "^0.407.0",
     "next": "^14.2.4",
@@ -46,6 +47,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
+    "recharts": "^2.12.7",
     "server-only": "^0.0.1",
     "sonner": "^1.5.0",
     "superjson": "^2.2.1",
